# firmware

./: .gitignore  README.md  button.h  config.h.example  console.sh  feedback_button.cpp  gpio_pin.h  idea-web-adapter.txt  led_strip.cpp  led_strip.h  make_buildinfo.py  meson.build  meson_options.txt  node_led_strip.cpp  node_led_test.cpp  node_mcp320x_test.cpp  node_power_switch.cpp  node_switch.cpp  node_temperature_sensor.cpp  node_template.cpp  node_wifi_indicator.cpp  periodic_message_poster.cpp  platformio.ini  relay.cpp  sensor_ds1820.cpp  sensor_ds1820.h  stacktrace.py  updater_http.h  upload.sh
components/: config_loader.cpp  config_loader.h  node_base.cpp  updater_ota.cpp  util.h  wifi_connector.cpp  wifi_connector.h
data-display/: config.py  database.py  main.py  requirements.txt
data-display/templates/: index.html  layout.html
doc/: Preparing_meson_ninja.md
doc/sunrise/: sunrise_formula.ods  sunrise_math.py
io/: feedback_button.h  gpio_pin.h  led_strip.cpp  led_strip.h  relay.cpp  sensor_bme280.cpp  sensor_bme280.h  sensor_dht22.cpp  sensor_dht22.h  sensor_ds1820.cpp  sensor_ds1820.h  sensor_mcp320x.cpp  toggle_switch.h
led_strip/: ButtonControl.cpp  ButtonControl.h  data.h  led_strip.ino  libraries.txt
mqtt-client/: database.py  main.py  requirements.txt
node-framework/: .gitignore  button.cpp  button.h  config.h.example  config_loader.cpp  config_loader.h  esp8266.crossfile  esp8266.crossfile.example  esp8266.crossfile.mmoebius  esp8266.crossfile.rikus  esp8266.crossfile.stock  feedback_button.cpp  feedback_button.h  gpio_pin.cpp  gpio_pin.h  led_strip.cpp  led_strip.h  meson.build  mqtt_handler.cpp  mqtt_handler.h  node_base.cpp  node_base.h  node_led_strip.cpp  node_power_switch.cpp  node_switch.cpp  node_temperature_sensor.cpp  node_template.cpp  node_wifi_indicator.cpp  periodic_message_poster.cpp  periodic_message_poster.h  relay.h  rotary_encoder.cpp  rotary_encoder.h  sdn.pro  sensor_dht22.h  sensor_ds1820.cpp  ticker_component.h  trampoline_magic.h  updater_http.cpp  upload.sh  (+3 more)
node-framework/subprojects/: notes.txt
node-framework/subprojects/Adafruit_PCD8544_Nokia_5110_LCD_library/: README.md  meson.build
node-framework/subprojects/Adafruit_PCD8544_Nokia_5110_LCD_library/examples/pcdtest/: pcdtest.ino
node-framework/subprojects/ArduinoJson/: library.properties  meson.build
node-framework/subprojects/ArduinoJson/src/ArduinoJson/: JsonBufferBase.hpp  JsonVariantComparisons.hpp  JsonVariantSubscripts.hpp  StaticJsonBuffer.hpp
node-framework/subprojects/ArduinoJson/src/ArduinoJson/TypeTraits/: IsVariant.hpp
node-framework/subprojects/ArduinoTemperatureControlLibrary/: meson.build
node-framework/subprojects/NeoPixelBus/: meson.build
node-framework/subprojects/OneWire/: meson.build
node-framework/subprojects/esp8266_arduino/: meson.build
node-framework/subprojects/esp8266_sdk/: meson.build
provisioning-server/: .gitignore  ZeroconfService.py  server.py
sdk_setup/: meson.build
software-defined-node/: .gitignore  config.h.example  config.json  esp8266.crossfile  gpio_pin.cpp  gpio_pin.h  led_strip.cpp  meson.build  mqtt_handler.cpp  mqtt_handler.h  ota_handler.cpp  ota_handler.h  rotary_encoder.h  sensor_dht22.cpp  sensor_dht22.h  software-defined-node.cpp  software-defined-node.ino  trampoline_magic.cpp  updater_http.cpp  updater_http.h  updater_ota.h  upload.sh  wifi_connector.h
software-defined-node/subprojects/: notes.txt
software-defined-node/subprojects/DHTSensorLibrary/: meson.build
software-defined-node/subprojects/PubSubClient/: meson.build
src/: config.h.example  main.cpp
src/components/: config_loader.cpp  config_loader.h  mqtt_handler.cpp  mqtt_handler.h  node_base.cpp  node_base.h  periodic_message_poster.cpp  periodic_message_poster.h  ticker_component.h  trampoline_magic.cpp  trampoline_magic.h  updater_ota.cpp  updater_ota.h  util.h  wifi_connector.cpp  wifi_connector.h
src/io/: button.cpp  button.h  feedback_button.cpp  feedback_button.h  gpio_pin.cpp  gpio_pin.h  pwm_pin.cpp  pwm_pin.h  relay.cpp  relay.h  rotary_encoder.cpp  rotary_encoder.h  sensor_bme280.cpp  sensor_bme280.h  sensor_bmp180.cpp  sensor_bmp180.h  sensor_bmp280.cpp  sensor_bmp280.h  sensor_dht22.cpp  sensor_dht22.h  sensor_ds1820.cpp  sensor_ds1820.h  sensor_mcp320x.cpp  sensor_mcp320x.h  toggle_switch.cpp  toggle_switch.h
subprojects/: notes.txt
subprojects/Adafruit_GFX_Library/: meson.build
subprojects/Adafruit_PCD8544_Nokia_5110_LCD_library/: Adafruit_PCD8544.cpp  Adafruit_PCD8544.h
subprojects/ArduinoJson/src/: ArduinoJson.hpp
subprojects/ArduinoJson/src/ArduinoJson/: DynamicJsonBuffer.hpp  JsonArraySubscript.hpp  JsonBuffer.hpp  JsonVariantBase.hpp  JsonVariantCasts.hpp
subprojects/ArduinoJson/src/ArduinoJson/Serialization/: FloatParts.hpp  JsonSerializerImpl.hpp
subprojects/BME280/: meson.build
subprojects/BME280/examples/bme280test/: bme280test.ino
subprojects/BMP180/: meson.build
subprojects/Mcp320x/: meson.build
subprojects/Mcp320x/src/: Mcp320x.cpp
subprojects/NeoPixelBus/: meson.build
subprojects/RotaryEncoder/: meson.build
subprojects/esp8266_arduino/: meson.build
subprojects/esp8266_sdk/: meson.build  meson.build.bak  meson_options.txt
subprojects/esp8266_sdk/ld/: meson.build
universal-node/: libraries.txt  node.ino  universal-node.ino
ws2812-trilader/: main.lua
ws2812_emu/: helpers.lua  main.lua  ws2812.lua
